# Project2/routes/projectRoutes.js
@@ -8,7 +8,13 @@ const {
 } = require('../controllers/projectController');
 const { validateCreateProject, validateProjectIdParam } = require('../middleware/validators');
 
-router.post('/', /* #swagger.tags = ['Projects'] */ validateCreateProject, createProject);
+router.post(
+  '/',
+  /* #swagger.tags = ['Projects'] */
+  /* #swagger.parameters['body'] = { in: 'body', description: 'New project details.', schema: { $ref: '#/definitions/CreateProjectRequest' } } */
+  validateCreateProject,
+  createProject
+);
 router.get('/', /* #swagger.tags = ['Projects'] */ getAllProjects);
 router.get('/:id', /* #swagger.tags = ['Projects'] */ validateProjectIdParam, getProjectById);
 router.delete('/:id', /* #swagger.tags = ['Projects'] */ validateProjectIdParam, deleteProject);
